test/spec/loop-end-label-mismatch.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop-end-label-mismatch.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/loop-end-label-mismatch.fail.wast:1:27: mismatching label "$a" != "$l"
(module (func loop $a end $l))
                          ^^

;;; STDERR ;;)
